/*modified sidebar to follow scroll */ .sidebar-content {     position: fixed;     width: inherit;     z-index: 0; }

--- a/static/css/style.green.css
+++ b/static/css/style.green.css
@@ -1,9 +1,9 @@
-/* 
-========================================= 
-========================================= 
+/*
+=========================================
+=========================================
 
 Startup Template By Bootstrapious.com
-========================================= 
+=========================================
 ========================================= */
 /*variant 2 - green */
 /*
@@ -323,6 +323,12 @@ SIDEBAR + RIGHT COLUMN
 */
 #sidebar {
   padding-top: 40px;
+}
+/*modified sidebar to follow scroll */
+.sidebar-content {
+    position: fixed;
+    width: inherit;
+    z-index: 0;
 }
 @media screen and (min-width: 992px) {
   .sidebar-content {
