--- a/static/css/style.sea.css
+++ b/static/css/style.sea.css
@@ -1,10 +1,10 @@
-/* 
-========================================= 
-========================================= 
+/*
+=========================================
+=========================================
 
-Startup Template By Bootstrapious.com    
+Startup Template By Bootstrapious.com
 
-========================================= 
+=========================================
 ========================================= */
 /* variant 3 - sea */
 /*
@@ -324,6 +324,12 @@ SIDEBAR + RIGHT COLUMN
 */
 #sidebar {
   padding-top: 40px;
+}
+/*modified sidebar to follow scroll */
+.sidebar-content {
+    position: fixed;
+    width: inherit;
+    z-index: 0;
 }
 @media screen and (min-width: 992px) {
   .sidebar-content {
